Reload new cat image onclick #meow button

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,7 @@
 		</div>
 
 		<div class="img-container">
-			<img src="@catUrl" class="card-img" alt="...">
+			<img src="@catUrl" class="card-img" alt="Random cat image">
 		</div>
 
 		<div class="card-body">
